--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;800&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Share+Tech+Mono&family=Orbitron:wght@400;700&family=Saira+Stencil+One&display=swap" rel="stylesheet">
     
-    <!-- React & ReactDOM -->
-    <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
-    
     <!-- Babel for JSX -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
@@ -322,15 +318,17 @@
       .hover-glow-lotr:hover { box-shadow: 0 0 25px rgba(234, 179, 8, 0.4); }
     </style>
     <script type="importmap">
-    {
-      "imports": {
-        "react": "https://esm.sh/react@^19.2.3",
-        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-        "react/": "https://esm.sh/react@^19.2.3/",
-        "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
-      }
-    }
-    </script>
+{
+  "imports": {
+    "react": "https://esm.sh/react@18.2.0",
+    "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0?deps=react@18.2.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
+  }
+}
+</script>
 </head>
 <body class="min-h-screen">
     <div class="bg-grain"></div>
@@ -366,6 +364,7 @@
       }
     </script>
 
-    <script type="text/babel" src="index.tsx"></script>
+    <!-- Main Logic Combined for GitHub Pages Compatibility -->
+    <script type="text/babel" src="index.tsx" data-presets="typescript,react" data-type="module"></script>
 </body>
 </html>
