--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
         background: radial-gradient(circle at 50% 10%, #1e1b4b 0%, #312e81 20%, #000000 60%, #450a0a 100%);
       }
 
+      .universe-rookie {
+        /* LAPD Night Patrol Blue/Black with Sirens */
+        background: radial-gradient(circle at 80% 20%, #172554 0%, #020617 60%, #000000 100%);
+      }
+
       /* Particles */
       .particle {
         position: absolute;
@@ -168,6 +173,22 @@
          animation-name: ash-fall !important;
          animation-duration: 10s !important;
       }
+
+      .universe-rookie + #root .particle {
+         /* Flashing sirens effect */
+         background: #ef4444;
+         box-shadow: 0 0 8px #ef4444;
+         width: 4px;
+         height: 4px;
+         animation-name: siren-flash !important;
+         animation-duration: 2s !important;
+      }
+      
+      .universe-rookie + #root .particle:nth-child(even) {
+         background: #3b82f6;
+         box-shadow: 0 0 8px #3b82f6;
+         animation-delay: 1s !important;
+      }
       
       @keyframes float-up {
         0% { transform: translateY(110vh) scale(0.5); opacity: 0; }
@@ -192,6 +213,12 @@
         0% { transform: translateY(-10vh) translateX(-20px) rotate(0deg); opacity: 0; }
         20% { opacity: 0.8; }
         100% { transform: translateY(110vh) translateX(20px) rotate(360deg); opacity: 0; }
+      }
+
+      @keyframes siren-flash {
+        0% { opacity: 0; transform: scale(0.5) translateY(100vh); }
+        50% { opacity: 1; transform: scale(1.5) translateY(50vh); }
+        100% { opacity: 0; transform: scale(0.5) translateY(0); }
       }
 
       /* Card Hover Animations */
@@ -225,12 +252,18 @@
         50% { box-shadow: 0 0 40px rgba(248, 113, 113, 0.4); border-color: rgba(252, 165, 165, 0.9); }
       }
 
+      @keyframes glow-pulse-rookie {
+        0%, 100% { box-shadow: 0 0 15px rgba(37, 99, 235, 0.1); border-color: rgba(30, 58, 138, 0.6); }
+        50% { box-shadow: 0 0 40px rgba(96, 165, 250, 0.4); border-color: rgba(147, 197, 253, 0.9); }
+      }
+
       .card-hp:hover { animation: glow-pulse-hp 3s ease-in-out infinite; }
       .card-hg:hover { animation: glow-pulse-hg 3s ease-in-out infinite; }
       .card-marvel:hover { animation: glow-pulse-marvel 2s ease-in-out infinite; }
       .card-lotr:hover { animation: glow-pulse-lotr 4s ease-in-out infinite; }
       .card-sw:hover { animation: glow-pulse-sw 3s ease-in-out infinite; }
       .card-st:hover { animation: glow-pulse-st 3s ease-in-out infinite; }
+      .card-rookie:hover { animation: glow-pulse-rookie 3s ease-in-out infinite; }
 
       /* UI Panels */
       .glass-panel {
@@ -279,6 +312,12 @@
         background: rgba(30, 5, 5, 0.8);
         border: 1px solid rgba(220, 38, 38, 0.3);
         box-shadow: 0 0 40px rgba(220, 38, 38, 0.15), inset 0 0 50px rgba(0,0,0,0.8);
+      }
+
+      .glass-panel-rookie {
+        background: rgba(10, 15, 40, 0.85);
+        border: 1px solid rgba(59, 130, 246, 0.3);
+        box-shadow: 0 0 40px rgba(37, 99, 235, 0.25);
       }
 
       /* Text Effects */
